Salesforce/force-app/main/default/objects/PaymentUpdate__mdt/PaymentUpdate__mdt.object-meta.xml
<CustomObject>
    <label>PaymentUpdate</label>
    <pluralLabel>PaymentUpdate</pluralLabel>
</CustomObject>