Salesforce/force-app/main/default/objects/PaymentUpdate__mdt/fields/FieldToUpdate__c.field-meta.xml
<CustomField>
    <fullName>FieldToUpdate__c</fullName>
    <label>FieldToUpdate</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>