Salesforce/force-app/main/default/objects/PaymentUpdate__mdt/fields/OrderPaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderPaymentStatus__c</fullName>
    <label>OrderPaymentStatus</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>