Salesforce/force-app/main/default/objects/PaymentUpdate__mdt/fields/ValueToUpdate__c.field-meta.xml
<CustomField>
    <fullName>ValueToUpdate__c</fullName>
    <label>ValueToUpdate</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>